parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    AND
    DECREASE
    DIFFERENT
    DIVISION
    DOUBLE
    ELSE
    EQUALS
    FALSE
    FOR
    FUNCTION
    GREATER
    GREATEREQUAL
    IF
    INCREASE
    LEFTBRACKET
    LEFTKEY
    LESSER
    LESSEREQUAL
    MULTIPLICATION
    OR
    PRIVATE
    PUBLIC
    READ
    RETURN
    RIGHTBRACKET
    RIGHTKEY
    SEMICOLON
    STRING
    SUBSTRACTION
    SUM
    TRUE
    VARDECLARATION
    VOID
    WHILE

Grammar

Rule 0     S' -> start
Rule 1     start -> metodo NEWLINE start
Rule 2     start -> metodo NEWLINE
Rule 3     start -> print NEWLINE start
Rule 4     start -> print NEWLINE
Rule 5     metodo -> number_assignations ASSIGNATION METODO LEFTPAR INT RIGHTPAR
Rule 6     metodo -> number_assignations ASSIGNATION METODO LEFTPAR INT error
Rule 7     metodo -> number_assignations ASSIGNATION METODO LEFTPAR error
Rule 8     metodo -> number_assignations ASSIGNATION METODO error
Rule 9     metodo -> number_assignations ASSIGNATION error
Rule 10    metodo -> number_assignations error
Rule 11    number_assignations -> NAME
Rule 12    number_assignations -> NAME COMMA NAME
Rule 13    number_assignations -> NAME COMMA NAME COMMA NAME
Rule 14    number_assignations -> NAME COMMA NAME COMMA NAME COMMA NAME
Rule 15    number_assignations -> NAME COMMA NAME COMMA NAME COMMA NAME COMMA NAME
Rule 16    print -> PRINT LEFTPAR NAME RIGHTPAR
Rule 17    print -> PRINT LEFTPAR NAME error
Rule 18    print -> PRINT LEFTPAR error
Rule 19    print -> PRINT error

Terminals, with rules where they appear

AND                  : 
ASSIGNATION          : 5 6 7 8 9
COMMA                : 12 13 13 14 14 14 15 15 15 15
DECREASE             : 
DIFFERENT            : 
DIVISION             : 
DOUBLE               : 
ELSE                 : 
EQUALS               : 
FALSE                : 
FOR                  : 
FUNCTION             : 
GREATER              : 
GREATEREQUAL         : 
IF                   : 
INCREASE             : 
INT                  : 5 6
LEFTBRACKET          : 
LEFTKEY              : 
LEFTPAR              : 5 6 7 16 17 18
LESSER               : 
LESSEREQUAL          : 
METODO               : 5 6 7 8
MULTIPLICATION       : 
NAME                 : 11 12 12 13 13 13 14 14 14 14 15 15 15 15 15 16 17
NEWLINE              : 1 2 3 4
OR                   : 
PRINT                : 16 17 18 19
PRIVATE              : 
PUBLIC               : 
READ                 : 
RETURN               : 
RIGHTBRACKET         : 
RIGHTKEY             : 
RIGHTPAR             : 5 16
SEMICOLON            : 
STRING               : 
SUBSTRACTION         : 
SUM                  : 
TRUE                 : 
VARDECLARATION       : 
VOID                 : 
WHILE                : 
error                : 6 7 8 9 10 17 18 19

Nonterminals, with rules where they appear

metodo               : 1 2
number_assignations  : 5 6 7 8 9 10
print                : 3 4
start                : 1 3 0

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . metodo NEWLINE start
    (2) start -> . metodo NEWLINE
    (3) start -> . print NEWLINE start
    (4) start -> . print NEWLINE
    (5) metodo -> . number_assignations ASSIGNATION METODO LEFTPAR INT RIGHTPAR
    (6) metodo -> . number_assignations ASSIGNATION METODO LEFTPAR INT error
    (7) metodo -> . number_assignations ASSIGNATION METODO LEFTPAR error
    (8) metodo -> . number_assignations ASSIGNATION METODO error
    (9) metodo -> . number_assignations ASSIGNATION error
    (10) metodo -> . number_assignations error
    (16) print -> . PRINT LEFTPAR NAME RIGHTPAR
    (17) print -> . PRINT LEFTPAR NAME error
    (18) print -> . PRINT LEFTPAR error
    (19) print -> . PRINT error
    (11) number_assignations -> . NAME
    (12) number_assignations -> . NAME COMMA NAME
    (13) number_assignations -> . NAME COMMA NAME COMMA NAME
    (14) number_assignations -> . NAME COMMA NAME COMMA NAME COMMA NAME
    (15) number_assignations -> . NAME COMMA NAME COMMA NAME COMMA NAME COMMA NAME

    PRINT           shift and go to state 5
    NAME            shift and go to state 6

    start                          shift and go to state 1
    metodo                         shift and go to state 2
    print                          shift and go to state 3
    number_assignations            shift and go to state 4

state 1

    (0) S' -> start .



state 2

    (1) start -> metodo . NEWLINE start
    (2) start -> metodo . NEWLINE

    NEWLINE         shift and go to state 7


state 3

    (3) start -> print . NEWLINE start
    (4) start -> print . NEWLINE

    NEWLINE         shift and go to state 8


state 4

    (5) metodo -> number_assignations . ASSIGNATION METODO LEFTPAR INT RIGHTPAR
    (6) metodo -> number_assignations . ASSIGNATION METODO LEFTPAR INT error
    (7) metodo -> number_assignations . ASSIGNATION METODO LEFTPAR error
    (8) metodo -> number_assignations . ASSIGNATION METODO error
    (9) metodo -> number_assignations . ASSIGNATION error
    (10) metodo -> number_assignations . error

    ASSIGNATION     shift and go to state 9
    error           shift and go to state 10


state 5

    (16) print -> PRINT . LEFTPAR NAME RIGHTPAR
    (17) print -> PRINT . LEFTPAR NAME error
    (18) print -> PRINT . LEFTPAR error
    (19) print -> PRINT . error

    LEFTPAR         shift and go to state 11
    error           shift and go to state 12


state 6

    (11) number_assignations -> NAME .
    (12) number_assignations -> NAME . COMMA NAME
    (13) number_assignations -> NAME . COMMA NAME COMMA NAME
    (14) number_assignations -> NAME . COMMA NAME COMMA NAME COMMA NAME
    (15) number_assignations -> NAME . COMMA NAME COMMA NAME COMMA NAME COMMA NAME

    ASSIGNATION     reduce using rule 11 (number_assignations -> NAME .)
    error           reduce using rule 11 (number_assignations -> NAME .)
    COMMA           shift and go to state 13


state 7

    (1) start -> metodo NEWLINE . start
    (2) start -> metodo NEWLINE .
    (1) start -> . metodo NEWLINE start
    (2) start -> . metodo NEWLINE
    (3) start -> . print NEWLINE start
    (4) start -> . print NEWLINE
    (5) metodo -> . number_assignations ASSIGNATION METODO LEFTPAR INT RIGHTPAR
    (6) metodo -> . number_assignations ASSIGNATION METODO LEFTPAR INT error
    (7) metodo -> . number_assignations ASSIGNATION METODO LEFTPAR error
    (8) metodo -> . number_assignations ASSIGNATION METODO error
    (9) metodo -> . number_assignations ASSIGNATION error
    (10) metodo -> . number_assignations error
    (16) print -> . PRINT LEFTPAR NAME RIGHTPAR
    (17) print -> . PRINT LEFTPAR NAME error
    (18) print -> . PRINT LEFTPAR error
    (19) print -> . PRINT error
    (11) number_assignations -> . NAME
    (12) number_assignations -> . NAME COMMA NAME
    (13) number_assignations -> . NAME COMMA NAME COMMA NAME
    (14) number_assignations -> . NAME COMMA NAME COMMA NAME COMMA NAME
    (15) number_assignations -> . NAME COMMA NAME COMMA NAME COMMA NAME COMMA NAME

    $end            reduce using rule 2 (start -> metodo NEWLINE .)
    PRINT           shift and go to state 5
    NAME            shift and go to state 6

    metodo                         shift and go to state 2
    start                          shift and go to state 14
    print                          shift and go to state 3
    number_assignations            shift and go to state 4

state 8

    (3) start -> print NEWLINE . start
    (4) start -> print NEWLINE .
    (1) start -> . metodo NEWLINE start
    (2) start -> . metodo NEWLINE
    (3) start -> . print NEWLINE start
    (4) start -> . print NEWLINE
    (5) metodo -> . number_assignations ASSIGNATION METODO LEFTPAR INT RIGHTPAR
    (6) metodo -> . number_assignations ASSIGNATION METODO LEFTPAR INT error
    (7) metodo -> . number_assignations ASSIGNATION METODO LEFTPAR error
    (8) metodo -> . number_assignations ASSIGNATION METODO error
    (9) metodo -> . number_assignations ASSIGNATION error
    (10) metodo -> . number_assignations error
    (16) print -> . PRINT LEFTPAR NAME RIGHTPAR
    (17) print -> . PRINT LEFTPAR NAME error
    (18) print -> . PRINT LEFTPAR error
    (19) print -> . PRINT error
    (11) number_assignations -> . NAME
    (12) number_assignations -> . NAME COMMA NAME
    (13) number_assignations -> . NAME COMMA NAME COMMA NAME
    (14) number_assignations -> . NAME COMMA NAME COMMA NAME COMMA NAME
    (15) number_assignations -> . NAME COMMA NAME COMMA NAME COMMA NAME COMMA NAME

    $end            reduce using rule 4 (start -> print NEWLINE .)
    PRINT           shift and go to state 5
    NAME            shift and go to state 6

    print                          shift and go to state 3
    start                          shift and go to state 15
    metodo                         shift and go to state 2
    number_assignations            shift and go to state 4

state 9

    (5) metodo -> number_assignations ASSIGNATION . METODO LEFTPAR INT RIGHTPAR
    (6) metodo -> number_assignations ASSIGNATION . METODO LEFTPAR INT error
    (7) metodo -> number_assignations ASSIGNATION . METODO LEFTPAR error
    (8) metodo -> number_assignations ASSIGNATION . METODO error
    (9) metodo -> number_assignations ASSIGNATION . error

    METODO          shift and go to state 16
    error           shift and go to state 17


state 10

    (10) metodo -> number_assignations error .

    NEWLINE         reduce using rule 10 (metodo -> number_assignations error .)


state 11

    (16) print -> PRINT LEFTPAR . NAME RIGHTPAR
    (17) print -> PRINT LEFTPAR . NAME error
    (18) print -> PRINT LEFTPAR . error

    NAME            shift and go to state 18
    error           shift and go to state 19


state 12

    (19) print -> PRINT error .

    NEWLINE         reduce using rule 19 (print -> PRINT error .)


state 13

    (12) number_assignations -> NAME COMMA . NAME
    (13) number_assignations -> NAME COMMA . NAME COMMA NAME
    (14) number_assignations -> NAME COMMA . NAME COMMA NAME COMMA NAME
    (15) number_assignations -> NAME COMMA . NAME COMMA NAME COMMA NAME COMMA NAME

    NAME            shift and go to state 20


state 14

    (1) start -> metodo NEWLINE start .

    $end            reduce using rule 1 (start -> metodo NEWLINE start .)


state 15

    (3) start -> print NEWLINE start .

    $end            reduce using rule 3 (start -> print NEWLINE start .)


state 16

    (5) metodo -> number_assignations ASSIGNATION METODO . LEFTPAR INT RIGHTPAR
    (6) metodo -> number_assignations ASSIGNATION METODO . LEFTPAR INT error
    (7) metodo -> number_assignations ASSIGNATION METODO . LEFTPAR error
    (8) metodo -> number_assignations ASSIGNATION METODO . error

    LEFTPAR         shift and go to state 21
    error           shift and go to state 22


state 17

    (9) metodo -> number_assignations ASSIGNATION error .

    NEWLINE         reduce using rule 9 (metodo -> number_assignations ASSIGNATION error .)


state 18

    (16) print -> PRINT LEFTPAR NAME . RIGHTPAR
    (17) print -> PRINT LEFTPAR NAME . error

    RIGHTPAR        shift and go to state 23
    error           shift and go to state 24


state 19

    (18) print -> PRINT LEFTPAR error .

    NEWLINE         reduce using rule 18 (print -> PRINT LEFTPAR error .)


state 20

    (12) number_assignations -> NAME COMMA NAME .
    (13) number_assignations -> NAME COMMA NAME . COMMA NAME
    (14) number_assignations -> NAME COMMA NAME . COMMA NAME COMMA NAME
    (15) number_assignations -> NAME COMMA NAME . COMMA NAME COMMA NAME COMMA NAME

    ASSIGNATION     reduce using rule 12 (number_assignations -> NAME COMMA NAME .)
    error           reduce using rule 12 (number_assignations -> NAME COMMA NAME .)
    COMMA           shift and go to state 25


state 21

    (5) metodo -> number_assignations ASSIGNATION METODO LEFTPAR . INT RIGHTPAR
    (6) metodo -> number_assignations ASSIGNATION METODO LEFTPAR . INT error
    (7) metodo -> number_assignations ASSIGNATION METODO LEFTPAR . error

    INT             shift and go to state 26
    error           shift and go to state 27


state 22

    (8) metodo -> number_assignations ASSIGNATION METODO error .

    NEWLINE         reduce using rule 8 (metodo -> number_assignations ASSIGNATION METODO error .)


state 23

    (16) print -> PRINT LEFTPAR NAME RIGHTPAR .

    NEWLINE         reduce using rule 16 (print -> PRINT LEFTPAR NAME RIGHTPAR .)


state 24

    (17) print -> PRINT LEFTPAR NAME error .

    NEWLINE         reduce using rule 17 (print -> PRINT LEFTPAR NAME error .)


state 25

    (13) number_assignations -> NAME COMMA NAME COMMA . NAME
    (14) number_assignations -> NAME COMMA NAME COMMA . NAME COMMA NAME
    (15) number_assignations -> NAME COMMA NAME COMMA . NAME COMMA NAME COMMA NAME

    NAME            shift and go to state 28


state 26

    (5) metodo -> number_assignations ASSIGNATION METODO LEFTPAR INT . RIGHTPAR
    (6) metodo -> number_assignations ASSIGNATION METODO LEFTPAR INT . error

    RIGHTPAR        shift and go to state 29
    error           shift and go to state 30


state 27

    (7) metodo -> number_assignations ASSIGNATION METODO LEFTPAR error .

    NEWLINE         reduce using rule 7 (metodo -> number_assignations ASSIGNATION METODO LEFTPAR error .)


state 28

    (13) number_assignations -> NAME COMMA NAME COMMA NAME .
    (14) number_assignations -> NAME COMMA NAME COMMA NAME . COMMA NAME
    (15) number_assignations -> NAME COMMA NAME COMMA NAME . COMMA NAME COMMA NAME

    ASSIGNATION     reduce using rule 13 (number_assignations -> NAME COMMA NAME COMMA NAME .)
    error           reduce using rule 13 (number_assignations -> NAME COMMA NAME COMMA NAME .)
    COMMA           shift and go to state 31


state 29

    (5) metodo -> number_assignations ASSIGNATION METODO LEFTPAR INT RIGHTPAR .

    NEWLINE         reduce using rule 5 (metodo -> number_assignations ASSIGNATION METODO LEFTPAR INT RIGHTPAR .)


state 30

    (6) metodo -> number_assignations ASSIGNATION METODO LEFTPAR INT error .

    NEWLINE         reduce using rule 6 (metodo -> number_assignations ASSIGNATION METODO LEFTPAR INT error .)


state 31

    (14) number_assignations -> NAME COMMA NAME COMMA NAME COMMA . NAME
    (15) number_assignations -> NAME COMMA NAME COMMA NAME COMMA . NAME COMMA NAME

    NAME            shift and go to state 32


state 32

    (14) number_assignations -> NAME COMMA NAME COMMA NAME COMMA NAME .
    (15) number_assignations -> NAME COMMA NAME COMMA NAME COMMA NAME . COMMA NAME

    ASSIGNATION     reduce using rule 14 (number_assignations -> NAME COMMA NAME COMMA NAME COMMA NAME .)
    error           reduce using rule 14 (number_assignations -> NAME COMMA NAME COMMA NAME COMMA NAME .)
    COMMA           shift and go to state 33


state 33

    (15) number_assignations -> NAME COMMA NAME COMMA NAME COMMA NAME COMMA . NAME

    NAME            shift and go to state 34


state 34

    (15) number_assignations -> NAME COMMA NAME COMMA NAME COMMA NAME COMMA NAME .

    ASSIGNATION     reduce using rule 15 (number_assignations -> NAME COMMA NAME COMMA NAME COMMA NAME COMMA NAME .)
    error           reduce using rule 15 (number_assignations -> NAME COMMA NAME COMMA NAME COMMA NAME COMMA NAME .)

